포트폴리오영역, 모바일 추가 작업

--- a/app/src/component/ParallaxSectionStyled.css
+++ b/app/src/component/ParallaxSectionStyled.css
@@ -10,6 +10,7 @@ html {
     justify-content: center;
     align-items: center;
     position: relative;
+    overflow-x: hidden;
 }
 
 .img-container > div {
