--- a/app/src/App.css
+++ b/app/src/App.css
@@ -21,13 +21,18 @@
 #root{
   width: 100vw;
   height: 100vh;
-  /* background-image: url('../src/assets/BackgroundImage.png');
+  background-image: url('../public/images/BackgroundImage.png');
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: contain; */
+  background-size: contain;
 }
 
 @media (max-width: 1200px) {
+  #root{
+    background-size: cover;
+  }
+}
+@media (max-width: 960px) {
   #root{
     background-size: cover;
   }
