--- a/src/component/ParallaxSectionStyled.css
+++ b/src/component/ParallaxSectionStyled.css
@@ -5,7 +5,7 @@ html {
 .img-container {
     position: relative;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     scroll-snap-align: start;
     display: flex;
     justify-content: center;
